# ChatVat

./: .gitignore  LICENSE  README.md  pyproject.toml
chatvat/: builder.py  config_loader.py  config_schema.py  constants.py  main.py
chatvat/bot_template/: .dockerignore  Dockerfile  requirements.txt
chatvat/bot_template/src/: config_loader.py  main.py
chatvat/bot_template/src/connectors/: crawler.py  loader.py
chatvat/bot_template/src/core/: engine.py  ingestor.py  vector.py
chatvat/bot_template/src/utils/: logger.py
chatvat/connectors/: loader.py
chatvat/core/: engine.py  ingestor.py  vector.py
chatvat/utils/: logger.py
