[tool.poetry]
name = "chatvat"
version = "0.1.0"
description = "A universal RAG chatbot builder CLI."
authors = ["Madhav Kapila <smartatk04@gmail.com>"]
readme = "README.md"

# CRITICAL: This ensures 'bot_template' is packed inside the wheel.
# Since we are using Poetry, we use this 'include' list, NOT setuptools.
include = ["chatvat/bot_template/**/*"]

[tool.poetry.dependencies]
python = "^3.11"

# --- CLI Dependencies (For 'chatvat init') ---
typer = {extras = ["all"], version = "^0.9.0"}
rich = "^13.7.0"
pyfiglet = "^1.0.2"
pydantic = "^2.0.0"

# --- Runtime/Engine Dependencies (For the Bot itself) ---
# Added these because your library now contains the core logic
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
python-dotenv = "^1.0.0"
requests = "^2.31.0"

# AI & RAG Stack
langchain = "^0.1.0"
langchain-community = "^0.0.10"
langchain-openai = "^0.0.2"
chromadb = "^0.4.22"
openai = "^1.10.0"
tiktoken = "^0.5.2"

# Crawler Utilities
beautifulsoup4 = "^4.12.0"

[tool.poetry.scripts]
chatvat = "chatvat.main:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"